# DeepGiBox

./: .gitignore  ADAPTIVE_QUEUE_IMPLEMENTATION.md  AGENTS.md  ARCHITECTURE.md  CHANGES_DECKLINK_INPUT.md  COORDINATE_TRANSFORMATION_FIX.md  Cargo.toml  DATA_FLOW_AND_LATENCY_EXPLAINED.md  DEBUG_RENDERING_CONFIG.md  DECKLINK_OUTPUT_INTEGRATION.md  DVP_DMA_IMPLEMENTATION.md  ENDOSCOPE_MODE_SWITCHING.md  FRAMEMETA_VALIDATION_REPORT.md  GPUDIRECT_RDMA_GUIDE.md  GPU_OVERLAY_IMPLEMENTATION.md  GPU_OVERLAY_QUICK_START.md  HEADLESS_STANDARD_IO.md  HOW_TO_MEASURE_REAL_CAPTURE_LATENCY.md  INFERENCE_LATENCY_ANALYSIS.md  INFERENCE_V2_GUIDE.md  INFINITE_LOOP_UPDATE.md  INSTRUCTION.md  INTERNAL_KEYING_INTEGRATION.md  LATENCY_MEASUREMENT_EXPLAINED.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PACKET_USAGE_GUIDE.md  PIPELINE_ARCHITECTURE.md  PIPELINE_CAPTURE_TO_OVERLAY_V2_GUIDE.md  PIPELINE_CONFIG_GUIDE.md  PIPELINE_DUMP_SUMMARY.md  PIPELINE_README.md  POSTPROCESSING_OPTIMIZATION_PLAN.md  PREPROCESSING_IMPLEMENTATION_SUMMARY.md  PREPROCESSING_QUICK_REFERENCE.md  PREPROCESSING_STATUS.md  PREPROCESSING_TEST_RESULTS.md  PREPROCESSING_V2_README.md  PREPROCESSING_VALIDATION.md  PROJECT_STRUCTURE.md  (+46 more)
.cargo/: config.toml
apps/playgrounds/: Cargo.toml
apps/playgrounds/examples/: composite_pipeline.rs  composite_static_png.rs
apps/runner/: Cargo.toml  FEATURE_TEST_GUIDE.md  HOW_TO_USE.md  QUICK_REFERENCE.md  README.md  RUNNER_QUICK_START.md  RUNNER_SUMMARY.md
apps/runner/src/: config_loader.rs  main.rs
capture_yuv_dump/: Cargo.toml
capture_yuv_dump/src/: main.rs
common_io/: Cargo.toml
common_io/src/: lib.rs
config/src/: lib.rs
configs/: README.md  dev_1080p60_yuv422_fp16_trt.toml  dev_1080p60_yuv422_fp16_trt_fuji.toml  dev_1080p60_yuv422_fp16_trt_olympus.toml  dev_1080p60_yuv422_fp16_trt_pentax.toml  dev_4k30_yuv422_fp16_trt.toml  inference_test.toml  pipeline_config.toml  postprocess_test.toml  runner.toml  runner_inference_only.toml  runner_keying.toml  runner_visualization.toml
configs/model/bisenet/: model.onnx
crates/common_io/: Cargo.toml
crates/common_io/src/: lib.rs  lib.rs.backup
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/decklink_input/: Cargo.toml  build.rs
crates/decklink_input/src/: capture.rs  lib.rs
crates/decklink_output/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  KEYING_README.md  QUICK_REFERENCE.md  README_FINAL.md  README_HARDWARE_KEYING_TEST.md  build.rs  output_shim.cpp
crates/decklink_output/src/: compositor.rs  compositor_gpu.cu  device.rs  keying.rs  lib.rs  output.rs
crates/decklink_output/src/examples/: keying_pipeline.rs  mod.rs
crates/inference/: Cargo.toml  INFERENCE_TEST_NOTES.md  PERFORMANCE_SUMMARY.md  README.md  REFACTORING_NOTES.md  TEST_RESULTS.md  USAGE_EXAMPLES.md  note.md
crates/inference/src/: lib.rs  tests.rs
crates/inference_v2/src/: lib.rs
crates/inference_v3/: Cargo.toml
crates/inference_v3/src/: lib.rs
crates/overlay_plan/: Cargo.toml  build.rs  overlay_plan_gpu.cu
crates/overlay_plan/src/: gpu_overlay.rs  lib.rs  temp.rs
crates/overlay_plan/tests/: gpu_integration_test.rs  gpu_overlay_test.rs  performance_benchmark.rs  simple_gpu_test.rs  test_class_labels.rs
crates/overlay_render/: Cargo.toml  build.rs  overlay_render.cu
crates/overlay_render/src/: lib.rs
crates/postprocess/: Cargo.toml  build.rs  nms_gpu.cu
crates/postprocess/src/: ema_smoother.rs  fast_nms.rs  gpu_postprocess.rs  kalman.rs  lib.rs  optical_flow.rs  post.rs  sort_tracker.rs
crates/postprocess/tests/: gpu_postprocess_test.rs
crates/preprocess_cuda/: Cargo.toml  README.md  build.rs  preprocess.cu
crates/preprocess_cuda/src/: lib.rs
crates/preprocess_cuda/tests/: integration_test.rs
crates/telemetry/: Cargo.toml  QUICKREF.md  README.md
crates/telemetry/src/: json.rs  lib.rs  log.rs  time.rs
decklink_input/: build.rs
decklink_input/src/: capture.rs  lib.rs
decklink_output/: build.rs
decklink_output/src/: image_loader.rs  lib.rs  output.rs
examples/: temp_important.rs  test_alpha_composite.rs
include/: DeckLinkAPIConfiguration.h  DeckLinkAPITypes.h
inference_v2/: Cargo.toml
internal_keying_demo/: Cargo.toml
internal_keying_demo/src/: main.rs
internal_keying_simple/: Cargo.toml  build.rs
internal_keying_simple/src/: main.rs
keying/: cuda_compat.h  keying.cu
shim/: README.md  decklink_extended.h  decklink_extended.rs  shim.cpp  shim_extended.cpp
src/: capture.rs  headless.rs  headless_old.rs  inference.rs  lib.rs  main.rs  packets.rs  pipeline.rs  post.rs  preprocessing.rs  preprocessing_v2.rs  preview.rs  preview_gl.rs  video.rs  visualize.rs
telemetry/src/: lib.rs
testsupport/: Cargo.toml
testsupport/src/: lib.rs
trt-shim/: *TENSOR_PACKET_INFERENCE.md  CLEANUP_COMPLETE.md  CMakeLists.txt  Cargo.toml  INFERENCE_SUCCESS.md  SEGFAULT_FIX.md  ZERO_COPY_API.md  ZERO_COPY_COMPLETE.md  install_cudnn8.sh
trt-shim/include/: trt_shim.h
trt-shim/src/: trt_shim.cpp
trt-shim/test_rust/: Cargo.toml  README.md  build_engine.py  inspect_onnx.py
trt-shim/test_rust/assets/: v7_optimized_YOLOv5.engine
trt-shim/test_rust/src/: bisenet_engine.rs  copy_tensor_packet_inference.rs  main.rs  main.rs.backup  tensor_packet_inference.rs  zero_copy_example.rs
