[package]
name = "decklink_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libc = "0.2"
minifb = "0.24"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
wgpu = "0.19"
pollster = "0.3"
glutin = "0.31"
glutin-winit = "0.4"
glow = "0.13"
anyhow = "1.0"
raw-window-handle = "0.5"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "devicelist"
path = "src/bin/device_list.rs"

[[bin]]
name = "capture_preview_gl"
path = "src/bin/capture_preview_gl.rs"

[[bin]]
name = "capture_test"
path = "src/bin/capture_test.rs"

[[bin]]
name = "capture_yuv_dump"
path = "src/bin/capture_yuv_dump.rs"
