[package]
name = "playgrounds"
version = "0.1.0"
edition = "2021"
[dependencies]
anyhow = "1"
image = "0.24"
ort = { version = "2.0.0-rc.10", features = ["tensorrt", "cuda"] }
cudarc = "0.11.9"
half = "2.4"
common_io = { path = "../../crates/common_io" }
config = { path = "../../crates/config" }
decklink_input = { path = "../../crates/decklink_input" }
decklink_output = { path = "../../crates/decklink_output" }
preprocess_cuda = { path = "../../crates/preprocess_cuda" }
inference = { path = "../../crates/inference" }
inference_v2 = { path = "../../crates/inference_v2" }
postprocess = { path = "../../crates/postprocess" }
overlay_plan = { path = "../../crates/overlay_plan" }
overlay_render = { path = "../../crates/overlay_render" }
telemetry = { path = "../../crates/telemetry" }
testsupport = { path = "../../testsupport" }
