[package]
name = "overlay_plan"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = []  # Enable GPU-accelerated overlay planning

[dependencies]
anyhow = "1"
common_io = { path = "../common_io" }
telemetry = { path = "../telemetry" }
config = { path = "../config" }

[build-dependencies]
cc = "1.0"
